--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 JWT_SECRET=supersecuresecret
 PORT=3000
-LLM_API_URL=http://localhost:8080/completion
+LLM_API_URL=http://127.0.0.1:8080/completion
+API_KEY=rich-millionaire
